mail/mail-html-transformer/src/snapshots/proton_mail_html_transformer__html2text__test__decorate_image_blocks_enabled.snap
---
source: mail/mail-html-transformer/src/html2text.rs
expression: output
snapshot_kind: text
---
🌸.
[image]
Team 🌺

foobar@cc.com

ProtonMail! <3


Sent with Proton Mail secure email."
