mail/mail-html-transformer/src/snapshots/proton_mail_html_transformer__html2text__test__with_decorate_links.snap
---
source: mail/mail-html-transformer/src/html2text.rs
expression: output
---
[this is an alt] [Alll][1] [Alll][2]
Alll
Alll

Example style that caused regexps to crash

[this is an alt] [Alll][3] [Alll][4]
Alll
Alll

Example style that caused regexps to crash

css_background_style_embedded
css_background_style_remote

[1]: lol-image.jpg
[2]: jeanne-image.jpg
[3]: cid:1234
[4]: cid:1234
