mail/mail-html-transformer/src/snapshots/proton_mail_html_transformer__html2text__test__with_urls.snap
---
source: mail/mail-html-transformer/src/html2text.rs
expression: output
snapshot_kind: text
---
My [ home ][1]!.

[1]: 127.0.0.1
