mail/mail-html-transformer/src/snapshots/proton_mail_html_transformer__html2text__test__without_decorate_links.snap
---
source: mail/mail-html-transformer/src/html2text.rs
expression: output
snapshot_kind: text
---
[this is an alt] Alll Alll
Alll
Alll

Example style that caused regexps to crash

[this is an alt] Alll Alll
Alll
Alll

Example style that caused regexps to crash

css_background_style_embedded
css_background_style_remote
